*SVN*

*0.1.0* (May 5th, 2008)

* Add support for overriding the unique attribute that defines an enumeration e.g.

  acts_as_enumeration :title
  acts_as_enumeration :controller, :action

* Add support for using enumerations in has_many/has_one associations

* Add support for Rails 2.0

* Use has_finder to auto-generate finders for each enumeration value after defining a belongs_to association

* Removed support for database-backed enumerations in favor of always using virtual enumerations

* Fix enumerations failing when being reloaded

* Fix problems with setting enumeration attributes to nil

* Add inheritance support for virtual enumerations

* Add support for converting unsafe identifier names (like "red!") to their safe symbol equivalent ("red")

* Add ability to use truth accessors for determing the identifier name

* Add support for virtual enumerations that don't need to be backed by the database

*0.0.2* (September 26th, 2007)

* Move test fixtures out of the test application root directory

* Convert dos newlines to unix newlines

*0.0.1* (August 4th, 2007)

* Initial public release

* Add/refactor unit tests

* Add documentation