@@ -1,4 +1,5 @@
 class Car < ActiveRecord::Base
   belongs_to  :color
   belongs_to  :manufacturer
+  has_many    :passengers
 end
