@@ -1,0 +1,3 @@
+class Passenger < ActiveRecord::Base
+  belongs_to :car
+end
